# tmpl

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CI.yml
contrib/: CMakeLists.txt
include/tmpl/: config.h  context.h  options.h  string.h  utils.h  worker.h
test/: CMakeLists.txt  main.cpp  string_test.cpp  worker_test.cpp
