add_subdirectory(static_assert)
add_subdirectory(assert)
add_subdirectory(config)
add_subdirectory(core)
add_subdirectory(mp11)
add_subdirectory(mpl)
add_subdirectory(predef)
add_subdirectory(preprocessor)
add_subdirectory(throw_exception)
add_subdirectory(type_traits)
add_subdirectory(utility)
add_subdirectory(io)
